fix: keep "hide navigation" link visible on shrink
[#OCD-2745]

--- a/src/app/navigation/navigation.scss
+++ b/src/app/navigation/navigation.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
 
 .toggle-navigation-open {
+    transition: all .4s ease;
     position: relative;
     bottom: -80px;
 
@@ -16,6 +17,13 @@
 
     .btn-link {
         color: #fff;
+    }
+}
+
+.navbar-scrolled {
+
+    .toggle-navigation-open {
+        bottom: -30px;
     }
 }
 
